# icons-atlas

./: .gitignore  Cargo.toml  LICENSE  README.md  check_changes.ps1  index.html  last_commit.txt  manifest.webmanifest  pack.ps1  serviceWorker.js
.github/workflows/: pack.yml
assets/: icons_atlas_bg.1d117c6d.wasm  icons_atlas_bg.76de4b16.wasm  icons_atlas_bg.8bef6ecc.wasm  icons_atlas_bg.94b89320.wasm  icons_atlas_web_bg.3ca16a2e.wasm  icons_atlas_web_bg.567dfb44.wasm  icons_atlas_web_bg.b3b0708c.wasm  index.090bfc65.js  index.09134e94.js  index.0dd95e65.css  index.0f62668e.css  index.2c705bcb.css  index.42516773.js  index.4d5164ab.js  index.53356753.js  index.67f22aa8.js  index.6fd0280b.js  index.7136379c.css  index.7cbb8308.js  index.8f41a41a.css  index.92729a6a.css  index.9753bead.js  index.9afb7cca.css  index.9cca5635.css  index.ab679012.css  index.ade594de.js  index.b0a869d5.js  index.b5b71a61.css  index.b853d062.js  index.b98e5279.css  index.c25f3ee2.css  index.c3ad37ad.css  index.c8a7b857.css  index.ded91655.js  index.eb31a069.css  index.f184c981.css  index.f9de81ce.js  index.fcc3fafc.js  vendor.3c8a1a11.js  vendor.48fdb6f3.js  (+3 more)
crates/icons-atlas-packer/: Cargo.toml
crates/icons-atlas-packer/src/: icon_record.rs  lib.rs  main.rs
crates/icons-atlas-web/: Cargo.toml
crates/icons-atlas-web/src/: lib.rs  virtual_fs.rs
crates/shared/: Cargo.toml
crates/shared/src/: icons_data_base.rs  lib.rs
utils/: Cargo.toml
utils/crates/icons-atlas/: Cargo.toml
utils/crates/icons-atlas/src/: lib.rs  virtual_fs.rs
utils/crates/packer/: Cargo.toml
web/: .eslintrc.json  .prettierrc  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: api.ts  constants.ts  index.tsx  serviceWorker.ts  translation.json  translation.ts  utils.ts
(+82 files in other folders)
