[package]
name = "icons-atlas-packer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.53"
base64 = "0.13.0"
bincode = "1.3.3"
brotli = "3.3.3"
dmi = "0.1.3"
glob = "0.3.0"
image = { version = "0.23.14", features = [
    "png",
    "gif",
], default-features = false }
shared = { path = "../shared" }
tantivy = "0.16.1"
uuid = { version = "0.8.2", features = ["v4"] }
